-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
None
-
Created sample project to show problem. Building with 5.4 the problem exists on Mac (do not see this on Windows or Linux). Building with 5.3 the problem does NOT exist.
-
-
ba440f35e1dc38a7cdec72176b921c7a6f4a4727
This problem ONLY occurs on Mac and Qt 5.4
Building application with Qt 5.4 when you expand the width of a window the contents are stretched when the call to the setMinimumWidth() or the resize() call is made. This does NOT occur on Qt 5.3.
See attachments that show the window after each step in the debugger.
Attached zip contains the sample project to reproduce the problem.
| For Gerrit Dashboard: QTBUG-44313 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 108307,4 | Cocoa integration - invalidate backing store on geometry update | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 108362,2 | Cocoa integration - invalid backing store on geometry update | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |