Cocoa integration - invalid backing store on geometry update

In case we skip flushing window events (while we're in setGeometry), backing store
has to be invalidated, otherwise drawRect will use scaled CGImage.

Change-Id: I26ff7083d7c702b4ff107eff235b2067eda540c2
Task-number: QTBUG-44313
Reviewed-by: Morten Johan Sørvig <morten.sorvig@theqtcompany.com>